[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/montserrat_eb_14.tres" type="DynamicFont" id=1]
[ext_resource path="res://menu/battle_menu/ui/player_unit_item/player_unit_item.gd" type="Script" id=2]

[node name="player_unit_item" type="MarginContainer"]
margin_right = 600.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 115 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 115.0
color = Color( 0.278431, 0.278431, 0.278431, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 115.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 600.0
margin_bottom = 109.0
size_flags_vertical = 3

[node name="change_team" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 103.0
rect_min_size = Vector2( 80, 0 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/change_team"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 88.0
margin_bottom = 103.0
rect_min_size = Vector2( 4, 0 )

[node name="units" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 484.0
margin_bottom = 103.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 488.0
margin_right = 496.0
margin_bottom = 103.0
rect_min_size = Vector2( 8, 0 )

[node name="edit" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 600.0
margin_bottom = 103.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Edit"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 113.0
margin_right = 600.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 2 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/change_team" to="." method="_on_change_team_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/edit" to="." method="_on_edit_pressed"]
